[gd_scene load_steps=8 format=3 uid="uid://dmdk4q4salsi1"]

[ext_resource type="Script" uid="uid://dutr56euw2vjv" path="res://space_ship.gd" id="1_cjnfv"]
[ext_resource type="Shader" uid="uid://cxr8ru5hwnmqv" path="res://higlightOutline.gdshader" id="2_cqcgy"]
[ext_resource type="Shader" uid="uid://c4dhfw57bu84b" path="res://outline.gdshader" id="3_mxenu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xra4r"]
render_priority = 0
shader = ExtResource("2_cqcgy")
shader_parameter/color = Color(1, 0.866395, 0.571788, 1)
shader_parameter/thickness = 0.03

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ye60j"]
render_priority = 0
shader = ExtResource("3_mxenu")
shader_parameter/color = Color(200, 200, 200, 1)
shader_parameter/thickness = 0.07

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cqcgy"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cjnfv"]
data = PackedVector3Array(0, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[node name="SpaceShip" type="Node3D" node_paths=PackedStringArray("mesh")]
script = ExtResource("1_cjnfv")
mesh = NodePath("RocketMesh")
highlightMaterial = SubResource("ShaderMaterial_xra4r")
selectionMaterial = SubResource("ShaderMaterial_ye60j")
speed = 4
animationVelocity = 3.0

[node name="RocketMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_cqcgy")

[node name="StaticBody3D" type="StaticBody3D" parent="RocketMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RocketMesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cjnfv")

[connection signal="input_event" from="RocketMesh/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="mouse_entered" from="RocketMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="RocketMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
